# shelfaware

./: .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dev_notebooks/: Barcodes-5.yaml  ReceiptExtractorIS-1.yaml  yolo-barcode-training.ipynb
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.js
models/: yolov8x_receipts.pt
shelfaware/: alembic.ini  pyproject.toml
shelfaware/barcode/: detector.py
shelfaware/food_inventory/: models.py
shelfaware/models/: barcodes.pt
shelfaware/openfoods/: README.md  client.py  food.py
shelfaware/openfoods/tests/: rolled_oats.json  test_openfoods.py
shelfaware/shelfaware/: Dockerfile
shelfaware/shelfaware/barcode/: README.md  utils.py
shelfaware/shelfaware/barcode/tests/: test_detector.py
shelfaware/shelfaware/food_inventory/: README.md  inventory.py
shelfaware/shelfaware/food_inventory/tests/: test_inventory.py
shelfaware/shelfaware/openfoods/: README.md
shelfaware/shelfaware/server/: __init__.py
